--- a/monitor/docker/docker-compose.yml
+++ b/monitor/docker/docker-compose.yml
@@ -38,7 +38,8 @@ services:
       - RABBITMQ_URL=${RABBITMQ_URL}
       - API_STOCK_INFO=${API_STOCK_INFO}
       - HEADERS=${HEADERS}
-      - CACHE_EXPIRATION= ${CACHE_EXPIRATION}
+      - CACHE_EXPIRATION=${CACHE_EXPIRATION}
+      - LOG_LEVEL=${LOG_LEVEL}
 
     depends_on:
       - db
@@ -54,6 +55,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
       - RABBITMQ_URL=${RABBITMQ_URL}
+      - LOG_LEVEL=${LOG_LEVEL}
     depends_on:
       - db
       - redis
@@ -66,6 +68,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
       - RABBITMQ_URL=${RABBITMQ_URL}
+      - LOG_LEVEL=${LOG_LEVEL}
     depends_on:
       - db
       - redis
@@ -78,6 +81,7 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
       - RABBITMQ_URL=${RABBITMQ_URL}
+      - LOG_LEVEL=${LOG_LEVEL}
     depends_on:
       - db
       - redis
