修复数据一致性问题

--- a/monitor/docker/.env
+++ b/monitor/docker/.env
@@ -8,4 +8,4 @@ CACHE_EXPIRATION=300  # 缓存时间（秒）
 
 # 请求头配置
 HEADERS={"Accept-Encoding": "gzip, deflate, br", "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, Gecko) Chrome/94.0.4606.61 Safari/537.36 Edg/94.0.992.31"}
-LOG_LEVEL=DEBUG  # 可设置为 DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_LEVEL=INFO  # 可设置为 DEBUG, INFO, WARNING, ERROR, CRITICAL
