--- a/admin_monitoring/Dockerfile
+++ b/admin_monitoring/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.12-slim
 WORKDIR /app
 COPY . /app
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "main.py"]
