--- a/stock_processor/Dockerfile
+++ b/stock_processor/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY . /app
 RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 
-CMD ["python", "main.py"]
+CMD ["python", "app/main.py"]
