--- a/stock_fetcher/Dockerfile
+++ b/stock_fetcher/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY . /app
 RUN pip install --no-cache-dir -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 
-CMD ["python", "main.py"]
+CMD ["python", "app/main.py"]
